Updated 'src/_projects/pbs.html' via CloudCannon

--- a/src/_projects/pbs.html
+++ b/src/_projects/pbs.html
@@ -29,9 +29,7 @@ tags:
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <p class="mb-0">Frontline interactive website copy here Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis dapibus
-          metus. Fusce sit amet lacinia tellus. Morbi dictum, ante eget dictum aliquet, ex lorem eleifend elit, sit amet ultricies
-          lorem ante ut mauris. Suspendisse pharetra, sapien at tincidunt ullamcorper, tellus elit lacinia quam,</p>
+          <p class="mb-0">An interactive based on a joint investigation by The New York Times, ProPublica and Frontline. It is based on extensive interviews with current and former intelligence officials in several countries, court files, and documents disclosed by former N.S.A. contractor Edward J. Snowden.</p>
         </div>
       </div>
     </div>
