Updated 'src/_projects/pbs.html' via CloudCannon

--- a/src/_projects/pbs.html
+++ b/src/_projects/pbs.html
@@ -5,9 +5,7 @@ quote: Web of Terror
 client: 'PBS Frontline'
 status: active
 summary:
-description_html: '<p>Frontline intro copy Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet est in justo
-malesuada auctor. Etiam efficitur urna nec molestie hendrerit. Etiam dictum turpis magna, a tempus nunc ultricies a.
-Etiam varius orci ac enim blandit, nec semper nulla lacinia.</p>'
+description_html: '<p>An interactive based on a joint investigation by The New York Times, ProPublica and Frontline. It is based on extensive interviews with current and former intelligence officials in several countries, court files, and documents disclosed by former N.S.A. contractor Edward J. Snowden.</p>'
 completion_date:
 hero_image: '/assets/img/projects/pbs/pbs-parallax.jpg'
 featured_image: '/assets/img/projects/pbs/pbs-feature.jpg'
