Updated 'src/_projects/pbs.html' via CloudCannon

--- a/src/_projects/pbs.html
+++ b/src/_projects/pbs.html
@@ -27,7 +27,7 @@ tags:
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <p class="mb-0">An interactive based on a joint investigation by The New York Times, ProPublica and Frontline. It is based on extensive interviews with current and former intelligence officials in several countries, court files, and documents disclosed by former N.S.A. contractor Edward J. Snowden.</p>
+          <p class="mb-0">Ocupop team members designed and produced the <a href="http://apps.frontline.org/web-of-terror/">interactive web app</a> that documents this riveting story.</p>
         </div>
       </div>
     </div>
