--- a/src/_projects/pbs.html
+++ b/src/_projects/pbs.html
@@ -22,7 +22,7 @@ tags:
     <div class="row">
       <div class="col-lg-4">
         <div class="content">
-          <h2>Website</h2>
+          <h2>Interactive</h2>
         </div>
       </div>
       <div class="col-lg-8">
