Updated 'src/_projects/google-developer-days.html' via CloudCannon

--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -21,13 +21,14 @@ tags:
   - design
 ---
 
-
 <section>
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
         <div class="content">
-          <h2 class="editable">Branding and event title</h2>
+          <h2 class="editable">
+            Branding &amp; Event Design
+          </h2>
         </div>
       </div>
       <div class="col-lg-8">
@@ -80,7 +81,9 @@ tags:
     <div class="row">
       <div class="col-lg-4">
         <div class="content">
-          <h2 class="editable">Animations</h2>
+          <h2 class="editable">
+            Videos &amp; Animations
+          </h2>
         </div>
       </div>
       <div class="col-lg-8">
@@ -94,7 +97,7 @@ tags:
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <img src="{{ site.placeholders.hero }}" class="img-fluid" alt="">
+          <img src="{{ site.placeholders.hero }}" class="img-fluid" alt="" />
         </div>
       </div>
     </div>
