Updated 'src/_projects/google-developer-days.html' via CloudCannon

--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -21,7 +21,7 @@ tags:
   - design
 ---
 
-<section>
+<section id="brand_event">
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
