Updated 'src/_projects/google-developer-days.html' via CloudCannon

--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -76,7 +76,7 @@ tags:
     </div>
   </div>
 </div>
-<section class="bg-black text-white">
+<section id="videos_animations" class="bg-black text-white">
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
