Updated 'src/_projects/google-developer-days.html' via CloudCannon

--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -88,9 +88,9 @@ tags:
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <p class="mb-0 editable">GDD Animations copy here Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis dapibus metus. Fusce sit
-          amet lacinia tellus. Morbi dictum, ante eget dictum aliquet, ex lorem eleifend elit, sit amet ultricies lorem ante ut
-          mauris. Suspendisse pharetra, sapien at tincidunt ullamcorper, tellus elit lacinia quam,</p>
+          <p class="mb-0 editable">
+            Ocupop designed video assets and created several animations to help bring the event to life and add motion and visual effects that complimented the overarching brand as well as each event's unique qualities.
+          </p>
         </div>
       </div>
     </div>
