--- a/src/_projects/airbel.html
+++ b/src/_projects/airbel.html
@@ -105,7 +105,7 @@ tags:
           <h3 class="editable">Airbel website</h3>
           <div class="editable">
             <p>The Airbel website clearly stepped away from the norm with unique layouts and features for the end-user. Many of the elements from the new brand were showcased to add visual appeal and complement the content. We worked closely with the client to create a &nbsp;custom content management tool to match their unique needs. This is the first step in an evolving web app that we are truly honoured to be a part of.</p>
-            <p>Please take a moment to visit their <a target="_blank" href="https://airbel.rescue.org/">website</a> to see the amazing projects that they are fostering around the world.&nbsp;</p>
+            <p>Please take a moment to visit their <a target="_blank" href="https://airbel.rescue.org/">website</a> to see the amazing people and projects from &nbsp; around the world.&nbsp;</p>
           </div>
         </div>
       </div>
