homepage assets updates

--- a/src/index.html
+++ b/src/index.html
@@ -43,15 +43,63 @@ mosaic:
 <section class="py-0 project-grid">
  {% include photo-grid.html %}
 </section>
-<div id="project-nav">
-  {% for i in (1..9) %}
-    <a href="#" class="project-nav-item">
-      <img src="{{ site.placeholders.aspect-1x1}}" class="img-fluid" alt="">
+<div class="bg-gray-100">
+  <div id="project-nav">
+    <div class="project-nav-item">
+      <img src="/assets/img/home/sustainable-am.png" class="img-fluid" alt="Sustainable America Logo">
       <div class="hover-overlay">
-        <p class="hover-primary-text">Project name</p>
+        <p class="hover-primary-text">Sustainable America</p>
       </div>
-    </a>
-  {% endfor %}
+    </div>
+    <div class="project-nav-item">
+      <img src="/assets/img/home/heirloom.png" class="img-fluid" alt="Heirloom Liqueurs Logo">
+      <div class="hover-overlay">
+        <p class="hover-primary-text">Heirloom Liqueurs</p>
+      </div>
+    </div>
+    <div class="project-nav-item">
+      <img src="/assets/img/home/prairie-estates.png" class="img-fluid" alt="Prairie Estates Genetics Logo">
+      <div class="hover-overlay">
+        <p class="hover-primary-text">Prairie Estates Genetics</p>
+      </div>
+    </div>
+    <div class="project-nav-item">
+      <img src="/assets/img/home/hihr.png" class="img-fluid" alt="HiHR Logo">
+      <div class="hover-overlay">
+        <p class="hover-primary-text">HiHR</p>
+      </div>
+    </div>
+    <div class="project-nav-item">
+      <img src="/assets/img/home/html5.png" class="img-fluid" alt="HTML5 Logo">
+      <div class="hover-overlay">
+        <p class="hover-primary-text">HTML5</p>
+      </div>
+    </div>
+    <div class="project-nav-item">
+      <img src="/assets/img/home/flutter.png" class="img-fluid" alt="Flutter Logo">
+      <div class="hover-overlay">
+        <p class="hover-primary-text">Flutter</p>
+      </div>
+    </div>
+    <div class="project-nav-item">
+      <img src="/assets/img/home/foxtax.png" class="img-fluid" alt="Fox Tax Logo">
+      <div class="hover-overlay">
+        <p class="hover-primary-text">Fox Tax</p>
+      </div>
+    </div>
+    <div class="project-nav-item">
+      <img src="/assets/img/home/tls.png" class="img-fluid" alt="TLS Logo">
+      <div class="hover-overlay">
+        <p class="hover-primary-text">TLS 1.3</p>
+      </div>
+    </div>
+    <div class="project-nav-item">
+      <img src="/assets/img/home/aequion.png" class="img-fluid" alt="Aeqion Logo">
+      <div class="hover-overlay">
+        <p class="hover-primary-text">Aequion</p>
+      </div>
+    </div>
+  </div>
 </div>
 
 <section class="bg-dark text-white">
