homepage assets and social share image

--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -14,10 +14,16 @@ description_html: >-
 completion_date:
 hero_image: /assets/img/projects/bittercube-project/bittercube-parallax.jpg
 featured_image: /assets/img/projects/bittercube-project/bittercube-feature.jpg
+gallery:
+  - image: /assets/img/projects/bittercube-project/bittercube-home-01.jpg
+  - image: /assets/img/projects/bittercube-project/bittercube-home-02.jpg
+  - image: /assets/img/projects/bittercube-project/bittercube-home-03.jpg
 tags:
   - branding
   - web
   - illustration
+
+
 ---
 
 <section>
