--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -13,8 +13,10 @@ completion_date:
 featured_image: /assets/img/projects/gdd-project/photos/GDD-5.jpg
 hero_image: /assets/img/projects/gdd-project/photos/GDD-parallax.jpg
 gallery:
-  - image:
-    caption:
+  - image: /assets/img/projects/gdd-project/gdd-home-01.jpg
+  - image: /assets/img/projects/gdd-project/gdd-home-02.jpg
+  - image: /assets/img/projects/gdd-project/gdd-home-03.jpg
+
 tags:
   - animation
   - events
