--- a/src/work.html
+++ b/src/work.html
@@ -34,7 +34,7 @@ testimonial:
     {% if project.status == "active" %}
     <div class="mix position-relative col-lg-6 {% for tag in project.tags %} {{ tag }}{% endfor %}">
       <a href="{{ project.url }}" class="project-item">
-        <div class="bg-image aspect-16x9" style="background-image: url({{ project.featured_image | default: site.placeholders.aspect-4x3 }})"></div>
+        <div class="bg-image aspect-2x1" style="background-image: url({{ project.featured_image }})"></div>
         <div class="hover-overlay">
           <div class="overlay-content">
             <p class="hover-primary-text">{{ project.quote }}</p>
