add google analytics

--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@ testimonial:
   <div class="project-nav-item">
     <img src="/assets/img/home/tls.png" class="img-fluid" alt="TLS Logo">
     <div class="hover-overlay">
-      <p class="hover-primary-text">TLS 1.3</p>
+      <p class="hover-primary-text">TLS</p>
     </div>
   </div>
   <div class="project-nav-item">
