Updated 'src/_projects/airbel.html' via CloudCannon

--- a/src/_projects/airbel.html
+++ b/src/_projects/airbel.html
@@ -32,7 +32,7 @@ tags:
       <div class="col-lg-8">
         <div class="content">
           <p class="mb-0 editable">
-            Airbel&nbsp;
+            We built this identity to both fit within the current branding of IRC with a nod to the bold black arrow within the yellow rectangle and to stand alone, exemplifying the essence of what the Airbel Center represents: human-centered and research led solutions. The hand-rendered, tribal inspired mono line logo represents four arrows coming together leading to an optimal solution contributing to helping the world in profound ways.&nbsp;
           </p>
         </div>
       </div>
