Updated 'src/_projects/google-developer-days.html' via CloudCannon

--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -35,9 +35,9 @@ tags:
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <p class="mb-0 editable">GDD branding copy here Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis dapibus metus. Fusce sit
-          amet lacinia tellus. Morbi dictum, ante eget dictum aliquet, ex lorem eleifend elit, sit amet ultricies lorem ante ut
-          mauris. Suspendisse pharetra, sapien at tincidunt ullamcorper, tellus elit lacinia quam,</p>
+          <p class="mb-0 editable">
+            Inspired by the idea of building together, the identity for these diverse developer events was based in the concept of building blocks... allowing us to create a system that was extensible across three continents. Using primary shapes and the classic Google colors, we echoed landscapes from their native lands as well as providing an element of celebration and whimsy with the developer symbols playfully interacting as confetti. This concept was successfully applied across digital and physical mediums alike creating an exciting and inspiring energy for all to enjoy.
+          </p>
         </div>
       </div>
     </div>
