--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -99,7 +99,7 @@ tags:
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <img src="{{ site.placeholders.hero }}" class="img-fluid" alt="" />
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/fci_FyKDrfA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </div>
