--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -99,7 +99,8 @@ tags:
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/fci_FyKDrfA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="https://player.vimeo.com/video/243216204" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/243216204">GDDIndia - In Stream - Thank You</a> from <a href="https://vimeo.com/user18023767">Ocupop</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
         </div>
       </div>
     </div>
