--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -98,7 +98,7 @@ tags:
     </div>
     <div class="row">
       <div class="col-12">
-        <div class="content">
+        <div class="content mx-auto">
           <iframe src="https://player.vimeo.com/video/243216204" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/243216204">GDDIndia - In Stream - Thank You</a> from <a href="https://vimeo.com/user18023767">Ocupop</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
         </div>
