--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -99,8 +99,7 @@ tags:
     <div class="row">
       <div class="col-12">
         <div class="content mx-auto">
-          <iframe src="https://player.vimeo.com/video/243216204" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<p><a href="https://vimeo.com/243216204">GDDIndia - In Stream - Thank You</a> from <a href="https://vimeo.com/user18023767">Ocupop</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/243216204" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
         </div>
       </div>
     </div>
