Updated 'src/index.html' via CloudCannon

--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@ testimonial:
     </div>
     <div class="row align-items-center justify-content-between">
       <div class="col-6 col-lg-2">
-        <div class="content">
+        <div class="content mt-5">
           <img src="/assets/img/home/logopile-google-formatted.png" alt="Google Logo" class="img-fluid" />
         </div>
       </div>
