Updated 'src/index.html' via CloudCannon

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,9 @@ testimonial:
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <p class="quote editable">Ocupop is what the industry-types would call a boutique agency.</p>
+          <p class="quote editable">
+            Needs a Quote...
+          </p>
         </div>
       </div>
     </div>
@@ -58,49 +60,49 @@ testimonial:
     </div>
   </div>
   <div class="project-nav-item">
-    <img src="/assets/img/home/heirloom.png" class="img-fluid" alt="Heirloom Liqueurs Logo">
+    <img src="/assets/img/home/heirloom.png" class="img-fluid" alt="Heirloom Liqueurs Logo" />
     <div class="hover-overlay">
       <p class="hover-primary-text">Heirloom Liqueurs</p>
     </div>
   </div>
   <div class="project-nav-item">
-    <img src="/assets/img/home/prairie-estates.png" class="img-fluid" alt="Prairie Estates Genetics Logo">
+    <img src="/assets/img/home/prairie-estates.png" class="img-fluid" alt="Prairie Estates Genetics Logo" />
     <div class="hover-overlay">
       <p class="hover-primary-text">Prairie Estates Genetics</p>
     </div>
   </div>
   <div class="project-nav-item">
-    <img src="/assets/img/home/hihr.png" class="img-fluid" alt="HiHR Logo">
+    <img src="/assets/img/home/hihr.png" class="img-fluid" alt="HiHR Logo" />
     <div class="hover-overlay">
       <p class="hover-primary-text">HiHR</p>
     </div>
   </div>
   <div class="project-nav-item">
-    <img src="/assets/img/home/html5.png" class="img-fluid" alt="HTML5 Logo">
+    <img src="/assets/img/home/html5.png" class="img-fluid" alt="HTML5 Logo" />
     <div class="hover-overlay">
       <p class="hover-primary-text">HTML5</p>
     </div>
   </div>
   <div class="project-nav-item">
-    <img src="/assets/img/home/flutter.png" class="img-fluid" alt="Flutter Logo">
+    <img src="/assets/img/home/flutter.png" class="img-fluid" alt="Flutter Logo" />
     <div class="hover-overlay">
       <p class="hover-primary-text">Flutter</p>
     </div>
   </div>
   <div class="project-nav-item">
-    <img src="/assets/img/home/foxtax.png" class="img-fluid" alt="Fox Tax Logo">
+    <img src="/assets/img/home/foxtax.png" class="img-fluid" alt="Fox Tax Logo" />
     <div class="hover-overlay">
       <p class="hover-primary-text">Fox Tax</p>
     </div>
   </div>
   <div class="project-nav-item">
-    <img src="/assets/img/home/tls.png" class="img-fluid" alt="TLS Logo">
+    <img src="/assets/img/home/tls.png" class="img-fluid" alt="TLS Logo" />
     <div class="hover-overlay">
       <p class="hover-primary-text">TLS</p>
     </div>
   </div>
   <div class="project-nav-item">
-    <img src="/assets/img/home/aequion.png" class="img-fluid" alt="Aeqion Logo">
+    <img src="/assets/img/home/aequion.png" class="img-fluid" alt="Aeqion Logo" />
     <div class="hover-overlay">
       <p class="hover-primary-text">Aequion</p>
     </div>
