Updated 'src/index.html' via CloudCannon

--- a/src/index.html
+++ b/src/index.html
@@ -137,9 +137,9 @@ testimonial:
         </div>
       </div>
     </div>
-    <div class="row align-items-center justify-content-between">
+    <div class="row align-items-center justify-content-between mt-5">
       <div class="col-6 col-lg-2">
-        <div class="content mt-5 pt-5">
+        <div class="content">
           <img src="/assets/img/home/logopile-google-formatted.png" alt="Google Logo" class="img-fluid" />
         </div>
       </div>
