--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@ testimonial:
       <div class="col-12">
         <div class="content">
           <p class="quote editable">
-            Needs a Quote...
+            I've never felt more alive!
           </p>
         </div>
       </div>
