Updated 10 files via CloudCannon

--- a/src/about.html
+++ b/src/about.html
@@ -66,6 +66,13 @@ testimonial:
         </div>
       </div>
     </div>
+    <div class="row slide-up-1">
+      <div class="col-12">
+        <div class="content editable">
+          <a href="#" class="btn btn-border btn-border-white">Watch the Talk</a>
+        </div>
+      </div>
+    </div>    
   </div>
 </section>
 <section id="team" class="py-0">
