--- a/src/about.html
+++ b/src/about.html
@@ -47,7 +47,6 @@ testimonial:
             every decision, and earning and maintaining trust while we blow
             their fucking minds.
           </p>
-          <a href="#" class="btn btn-border btn-border-white">Watch the Talk</a>
         </div>
       </div>
       <div class="col-md-6">
@@ -62,14 +61,13 @@ testimonial:
             design some of the most influential logos, campaigns, and user
             interfaces on the web over the last twenty years.
           </p>
-          <a href="https://vimeo.com/134270678/39f6957127" target="_blank" class="btn btn-border btn-border-white">Watch the Talk</a>
         </div>
       </div>
     </div>
     <div class="row slide-up-1">
       <div class="col-12">
         <div class="content editable">
-          <a href="#" class="btn btn-border btn-border-white">Watch the Talk</a>
+          <a href="https://www.youtube.com/playlist?list=PLU_iD88214HBfyTjP-U4vW2w6lTv-iCxg" class="btn btn-border btn-border-white">Watch the Talks</a>
         </div>
       </div>
     </div>    
