Updated 'src/about.html' via CloudCannon

--- a/src/about.html
+++ b/src/about.html
@@ -66,7 +66,7 @@ testimonial:
     </div>
     <div class="row slide-up-1">
       <div class="col-12">
-        <div class="content editable">
+        <div class="content editable text-center">
           <a href="https://www.youtube.com/playlist?list=PLU_iD88214HBfyTjP-U4vW2w6lTv-iCxg" class="btn btn-border btn-border-white">Watch the Talks</a>
         </div>
       </div>
