--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,10 @@ testimonial:
       <div class="col-12">
         <div class="content editable">
           <p>
-            As experts, we're hired to deliver solutions not options. We've honed an uncanny ability to be direct yet diplomatic, concise yet collaborative&mdash;tackling tough conversations and even tougher design problems together. We avoid the 'consultant-cop-out' of forcing clients to choose between multiple partially thought out options and instead work collaboratively toward one reasoned, powerful solution.
+            Yeah. No. That’s complete bullshit. Though we have tons of testimonials exalting the breadth of our awesomeness (from Jeff’s beard to Michael’s hair to Abby’s quality nicknames to even our work itself), this quote is made up, but it’s what we expect every client to say after working with Ocupop.
+          </p>
+          <p>
+            The power of design thinking paired with unparalleled enthusiasm and empathy makes for a creative experience like no other. Equal parts energizing and enlightening, our client relationships are tight. We dig deep, debate, and deliver together—laughing, crying and fighting like hell to change lives... or at very least blow minds.
           </p>
         </div>
       </div>
