Updated 'src/index.html' via CloudCannon

--- a/src/index.html
+++ b/src/index.html
@@ -25,26 +25,36 @@ testimonial:
   title:
   company: Google
 ---
+ {% include transition.html %} 
 
 <section id="page-intro">
   <div class="container">
-    <div class="row">
+    <div class="row ">
       <div class="col-12">
         <div class="content">
-          <p class="quote editable">
-            I have never felt more alive!
+          <p class="quote">"I have never felt more alive!"</p>
+          <p class="quote-author">
+            <strong>Bert Appward</strong><br />Fortune 100 Company
           </p>
         </div>
       </div>
     </div>
     <div id="home-copy" class="row">
       <div class="col-12">
-        <div class="content editable">
+        <div class="content">
           <p>
-            Yeah. No. That’s complete bullshit. Though we have tons of testimonials exalting the breadth of our awesomeness (from Jeff’s beard to Michael’s hair to Abby’s quality nicknames to even our work itself), this quote is made up, but it’s what we expect every client to say after working with Ocupop.
+            Yeah. No. That’s complete bullshit. Though we have tons of
+            testimonials exalting the breadth of our awesomeness (from Jeff’s
+            beard to Michael’s hair to Abby’s quality nicknames to even our work
+            itself), this quote is made up, but it’s what we expect every client
+            to say after working with Ocupop.
           </p>
           <p>
-            The power of design thinking paired with unparalleled enthusiasm and empathy makes for a creative experience like no other. Equal parts energizing and enlightening, our client relationships are tight. We dig deep, debate, and deliver together—laughing, crying and fighting like hell to change lives... or at very least blow minds.
+            The power of design thinking paired with unparalleled enthusiasm and
+            empathy makes for a creative experience like no other. Equal parts
+            energizing and enlightening, our client relationships are tight. We
+            dig deep, debate, and deliver together—laughing, crying and fighting
+            like hell to change lives... or at very least blow minds.
           </p>
         </div>
       </div>
