Updated 'src/index.html' via CloudCannon

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@ testimonial:
   title:
   company: Google
 ---
- {% include transition.html %} 
+ <!--{% include transition.html %} -->
 
 <section id="page-intro">
   <div class="container">
