Updated 'src/index.html' via CloudCannon

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@ testimonial:
     <div class="row ">
       <div class="col-12">
         <div class="content">
-          <p class="quote">"I have never felt more alive!"</p>
+          <p class="quote">I have never felt more alive!</p>
           <p class="quote-author">
             <strong>Bert Appward</strong><br />Fortune 100 Company
           </p>
