Updated 'src/_projects/airbel.html' via CloudCannon

--- a/src/_projects/airbel.html
+++ b/src/_projects/airbel.html
@@ -1,24 +1,26 @@
 ---
 layout: project
 quote: Human-centered
-client: Airbel
+client: 'Airbel: International Rescue Committee'
 status: active
 summary:
-description_html: '<p>Our goal was to create a compelling web presence for the Airbel Center, IRC’s Innovation lab— The group that brings
-together multidisciplinary teams of experts to develop life-changing, highly scalable solutions that meet the needs of
-people affected by conflict and crisis.</p>'
+description_html: >-
+  <p>Our goal was to create a compelling web presence for the Airbel Center,
+  IRC&rsquo;s Innovation lab&mdash; The group that brings together
+  multidisciplinary teams of experts to develop life-changing, highly scalable
+  solutions that meet the needs of people affected by conflict and crisis.</p>
 completion_date:
-featured_image: '/assets/img/projects/airbel/airbel-work-tile.jpg'
-hero_image: '/assets/img/projects/airbel/photos/airbel-parallax.jpg'
+featured_image: /assets/img/projects/airbel/airbel-work-tile.jpg
+hero_image: /assets/img/projects/airbel/photos/airbel-parallax.jpg
 gallery:
-- image:
+  - image:
 caption:
 tags:
-- animation
-- branding
-- illustration
-- strategy
-- web
+  - animation
+  - branding
+  - illustration
+  - strategy
+  - web
 ---
 
 <section id="identity">
