--- a/src/about.html
+++ b/src/about.html
@@ -63,16 +63,41 @@ testimonial:
           </p>
         </div>
       </div>
-    </div>
-    <div class="row slide-up-1">
+    </div>  
+  </div>
+  
+</section>
+<section class="bg-gray-800">
+  <div class="container">
+    <div class="row">
       <div class="col-12">
         <div class="content editable text-center">
-          <a href="https://www.youtube.com/playlist?list=PLU_iD88214HBfyTjP-U4vW2w6lTv-iCxg" class="btn btn-border btn-border-white">Watch the Talks</a>
+          <a data-src="https://www.youtube.com/embed/https://www.youtube.com/embed/?list=PLU_iD88214HBfyTjP-U4vW2w6lTv-iCxg&listType=search"
+            class="btn btn-border btn-border-white video-btn" data-toggle="modal" data-target="#video-modal">Watch the Talks</a>
         </div>
       </div>
-    </div>    
+    </div>
   </div>
 </section>
+<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/eIibr26XImA" frameborder="0"
+  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+<!-- href="https://www.youtube.com/playlist?list=PLU_iD88214HBfyTjP-U4vW2w6lTv-iCxg" -->
+<!-- Modal -->
+<div class="modal fade" id="video-modal" tabindex="-1" role="dialog" aria-labelledby="Video Modal"
+  aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <iframe class="embed-responsive-item" src="" id="video" allowscriptaccess="always" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay width="100%" height="500px"></iframe>
+      </div>
+    </div>
+  </div>
+</div>
 <section id="team" class="py-0">
   <div class="row no-gutters">
     {% for member in site.data.staff %}
