--- a/src/404.html
+++ b/src/404.html
@@ -27,17 +27,32 @@ permalink: /404
             display: table-cell;
             vertical-align: middle;
             margin: 2em auto;
+            background-color: #333333;
         }
 
         h1 {
-            color: #555;
+            color: #ffffff;
             font-size: 2em;
             font-weight: 400;
+            font-family: "commuters-sans", Helvetica, Arial, sans-serif;
         }
 
         p {
-            margin: 0 auto;
+            margin: 15px auto;
+            color: #ffffff;
             width: 280px;
+            font-family: "commuters-sans", Helvetica, Arial, sans-serif;
+        }
+        img {
+          width: 200px;
+          margin-bottom: 20px;
+        }
+        a {
+          color: #fff;
+          border: 1px solid #ffffff;
+          text-decoration: none;
+          display: inline-block;
+          padding: 10px;
         }
 
         @media only screen and (max-width: 280px) {
@@ -61,8 +76,10 @@ permalink: /404
       <div class="row">
         <div class="col-xs-12">
           <div class="content">
+            <img src="/assets/img/logo-vertical-white.svg"/>
             <h1>Page Not Found</h1>
             <p>Sorry, but the page you were trying to view does not exist.</p>
+            <a href="/">Return to home</a>
           </div>
         </div>
       </div>
