--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -12,7 +12,7 @@ description_html: >-
   philosophy, and team. And once they saw the new logo, every one of &lsquo;em
   had a new tattoo!</p>
 completion_date:
-hero_image: /assets/img/projects/bittercube-project/bittercube-parallax.jpg
+hero_image: 
 featured_image: /assets/img/projects/bittercube-project/bittercube-feature.jpg
 gallery:
   - image: /assets/img/projects/bittercube-project/bittercube-home-01.jpg
@@ -25,7 +25,7 @@ tags:
 
 
 ---
-
+<img src="/assets/img/projects/bittercube-project/bittercube-parallax.jpg" class="img-fluid" alt="Bittercube banner image">
 <section>
   <div class="container">
     <div class="row">
