remove parallax effect on about page

--- a/src/about.html
+++ b/src/about.html
@@ -29,9 +29,7 @@ testimonial:
     </div>
   </div>
 </section>
-<div class="parallax-window">
-  <div class="bg-image aspect-4x3" style="background-image: url('/uploads/ocupop-about-fucknoshityeah.jpg')"></div>
-</div>
+<img src="/uploads/ocupop-about-fucknoshityeah.jpg" class="img-fluid" alt="Shit No Fuck ya Cheers image">
 <section class="bg-dark text-white">
   <div class="container">
     <div class="row slide-up-1">
@@ -79,10 +77,6 @@ testimonial:
     </div>
   </div>
 </section>
-<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/eIibr26XImA" frameborder="0"
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-<!-- href="https://www.youtube.com/playlist?list=PLU_iD88214HBfyTjP-U4vW2w6lTv-iCxg" -->
-<!-- Modal -->
 <div class="modal fade" id="video-modal" tabindex="-1" role="dialog" aria-labelledby="Video Modal"
   aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
