about page image fix

--- a/src/about.html
+++ b/src/about.html
@@ -29,7 +29,8 @@ testimonial:
     </div>
   </div>
 </section>
-<img src="/uploads/ocupop-about-fucknoshityeah.jpg" class="img-fluid" alt="Shit No Fuck ya Cheers image">
+<!-- <img src="/uploads/ocupop-about-fucknoshityeah.jpg" class="img-fluid" alt="Shit No Fuck ya Cheers image"> -->
+<div class="bg-image aspect-4x3" style="background-image: url(/uploads/ocupop-about-fucknoshityeah.jpg)"></div>
 <section class="bg-dark text-white">
   <div class="container">
     <div class="row slide-up-1">
