video modal autoplay

--- a/src/about.html
+++ b/src/about.html
@@ -70,7 +70,7 @@ testimonial:
     <div class="row">
       <div class="col-12">
         <div class="content editable text-center">
-          <a data-src="https://www.youtube.com/embed/https://www.youtube.com/embed/?list=PLU_iD88214HBfyTjP-U4vW2w6lTv-iCxg&listType=search"
+          <a data-src="https://www.youtube.com/embed/https://www.youtube.com/embed/?list=PLU_iD88214HBfyTjP-U4vW2w6lTv-iCxg&listType=search?autoplay=1"
             class="btn btn-border btn-border-white video-btn" data-toggle="modal" data-target="#video-modal">Watch the Talks</a>
         </div>
       </div>
