--- a/src/about.html
+++ b/src/about.html
@@ -87,7 +87,7 @@ testimonial:
         </button>
       </div>
       <div class="modal-body">
-        <iframe class="embed-responsive-item" src="" id="video" allowscriptaccess="always" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay width="100%" height="500px"></iframe>
+        <iframe class="embed-responsive-item" src="" id="video" allowscriptaccess="always" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay width="100%"></iframe>
       </div>
     </div>
   </div>
