fix trademark symbol

--- a/src/index.html
+++ b/src/index.html
@@ -225,7 +225,7 @@ testimonial:
             creative debate, Tom Collinses, skateboard ramps, and world class
             design. Working at Ocupop is designed to be the best job you’ve ever
             had—and we are always looking for the right people to add to The
-            World’s Greatest DesignsquadTM, so drop a joke in the joke station
+            World’s Greatest Designsquad&trade;, so drop a joke in the joke station
             and let’s see if you’ve got what it takes!
           </p>
           <a href="/about" class="btn btn-border">About Us</a>
