mobile styles for projects

--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -24,7 +24,7 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
-        <div class="content">
+        <div class="content pb-0">
           <h2 class="editable">Season Branding</h2>
         </div>
       </div>
