--- a/src/_projects/pbs.html
+++ b/src/_projects/pbs.html
@@ -21,13 +21,13 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
-        <div class="content">
-          <h2>Interactive</h2>
+        <div class="content pb-0">
+          <h2 class="editable">Interactive</h2>
         </div>
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <p class="mb-0">Ocupop team members designed and produced the <a href="http://apps.frontline.org/web-of-terror/">interactive web app</a> that documents this riveting story.</p>
+          <p class="mb-0 editable">Ocupop team members designed and produced the <a href="http://apps.frontline.org/web-of-terror/">interactive web app</a> that documents this riveting story.</p>
         </div>
       </div>
     </div>
