--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -27,7 +27,7 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
-        <div class="content">
+        <div class="content pb-0">
           <h2 class="editable">
             Branding &amp; Event Design
           </h2>
