--- a/src/_projects/kunoa.html
+++ b/src/_projects/kunoa.html
@@ -21,7 +21,7 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
-        <div class="content">
+        <div class="content pb-0">
           <h2 class="editable">Identity</h2>
         </div>
       </div>
