about page updates, copy edits

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@ testimonial:
         <div class="content">
           <p class="quote">I have never felt more alive!</p>
           <p class="quote-author">
-            <strong>Bert Appward</strong><br />CEO Fortune 100 Company
+            <strong>Bert Appward</strong><br />CEO, worlds largest company
           </p>
         </div>
       </div>
