--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -71,7 +71,7 @@ tags:
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <iframe src="https://player.vimeo.com/video/307118616" width="100%" height="600" frameborder="0" webkitallowfullscreen
+          <iframe src="https://player.vimeo.com/video/307118616" width="100%" frameborder="0" webkitallowfullscreen
             mozallowfullscreen allowfullscreen></iframe>
         </div>
       </div>
