small screen style fixes for projects

--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -63,7 +63,7 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
-        <div class="content position-sticky sticky-top">
+        <div class="content position-sticky sticky-top pb-0">
           <h3 class="editable">Website</h3>
           <div class="editable">
             <p>The Bittercube website was a clear reflection of their new brand and identity. We were able to showcase clear messaging and visuals to match the brand. The recipe functionality brought to life a large repertoire of excellent recipes and provided the client a toolset to manage an ever-growing data set. If you are thirsty... <a target="_blank" href="https://bittercube.com/recipes">Check it out!</a></p>
