--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -58,7 +58,7 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
-        <div class="content">
+        <div class="content pb-0">
           <h2>Animation</h2>
         </div>
       </div>
@@ -84,7 +84,7 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
-        <div class="content position-sticky sticky-top">
+        <div class="content position-sticky sticky-top pb-0">
           <h3 class="editable">Promotional Website</h3>
           <div class="editable">
             <p>Launch Microsite was designed to set the tone for the upcoming season…meant to get students, coaches, and potential
