--- a/src/_projects/html-5.html
+++ b/src/_projects/html-5.html
@@ -79,7 +79,7 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
-        <div class="content position-sticky sticky-top">
+        <div class="content position-sticky sticky-top pb-0">
           <h3 class="editable">Website</h3>
           <div class="editable">
             <p>Sometimes a logo is such a big deal that the reveal deserves an entire website. Hell, we even made sickers and <a href="https://html5shirt.com/" title="HTML5 Shirts">t-shirts</a> for this one. </p>
