--- a/src/_projects/kunoa.html
+++ b/src/_projects/kunoa.html
@@ -59,7 +59,7 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
-        <div class="content">
+        <div class="content pb-0">
           <h2 class="editable">Packaging</h2>
         </div>
       </div>
@@ -80,7 +80,7 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
-        <div class="content position-sticky sticky-top">
+        <div class="content position-sticky sticky-top pb-0">
           <h3 class="editable">Website and Online Store</h3>
           <div class="editable">
             <p>Visit the Kunoa website to read the story behind the beef, learn about becoming a member or their team, or order up some merch or a <a href="https://shop.kunoacattle.com/">case of jerky</a>.</p>
