--- a/src/_projects/airbel.html
+++ b/src/_projects/airbel.html
@@ -103,7 +103,7 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
-        <div class="content position-sticky sticky-top">
+        <div class="content position-sticky sticky-top pb-0">
           <h3 class="editable">Airbel website</h3>
           <div class="editable">
             <p>The Airbel website clearly stepped away from the norm with unique layouts and features for the end-user. Many of the elements from the new brand were showcased to add visual appeal and complement the content. We worked closely with the client to create a &nbsp;custom content management tool to match their unique needs. This is the first step in an evolving web app that we are truly honoured to be a part of.</p>
