Updated 'src/forms/apply-now.html' via CloudCannon

--- a/src/forms/apply-now.html
+++ b/src/forms/apply-now.html
@@ -1,7 +1,7 @@
 ---
 layout: form
 title: Testimonials
-permalink: /testimonials/new
+permalink: /apply-now
 ---
 <section id="page-intro" class="pt-0">
   <div class="container">
