Updated 'src/forms/testimonials-copy.html' via CloudCannon

--- a/src/forms/testimonials-copy.html
+++ b/src/forms/testimonials-copy.html
@@ -9,7 +9,8 @@ permalink: /disney/discovery
       <div class="col-12">
         <div class="content pb-0">
         <div class="editable mt-5">
-          
+          <h1>Editable Heading here...</h1>
+          <p>Add form description.... Editable in Cloudcannon</p>
 
           </div>
 <div class="cognito">
