--- a/src/forms/disney-discovery.html
+++ b/src/forms/disney-discovery.html
@@ -9,8 +9,8 @@ permalink: /disney/discovery
       <div class="col-12">
         <div class="content pb-0">
         <div class="editable mt-5">
-          <h1>Editable Heading here...</h1>
-          <p>Add form description.... Editable in Cloudcannon</p>
+        <h1>Disney Discovery Questions</h1>
+          <p>Below are a list of questions to help Ocupop get a better understanding of what is on the minds of key stakeholders as we prepare for our Discovery Day. There are no wrong answers. We thank you for your input!</p>
         </div>
 <div class="cognito">
 <script src="https://services.cognitoforms.com/s/bbN8iw1MJUqjPe6aHn-_rw"></script>
