Updated 'src/forms/disney-discovery.html' via CloudCannon

--- a/src/forms/disney-discovery.html
+++ b/src/forms/disney-discovery.html
@@ -11,6 +11,7 @@ permalink: /disney/discovery
         <div class="editable mt-5">
         <h1>Disney Discovery Questions</h1>
           <p>Below are a list of questions to help Ocupop get a better understanding of what is on the minds of key stakeholders as we prepare for our Discovery Day. There are no wrong answers. We thank you for your input!</p>
+          <p>Please complete by the end of the day on August 16th.</p>
         </div>
 <div class="cognito">
 <script src="https://services.cognitoforms.com/s/bbN8iw1MJUqjPe6aHn-_rw"></script>
