Updated 'src/forms/disney-discovery.html' via CloudCannon

--- a/src/forms/disney-discovery.html
+++ b/src/forms/disney-discovery.html
@@ -3,6 +3,9 @@ layout: form
 title: Disney Discovery Questions
 permalink: /disney/discovery
 ---
+<style>
+    .c-forms-form-title { display: none !important; }
+</style>
 <section id="page-intro" class="pt-0">
   <div class="container">
     <div class="row">
