--- a/src/forms/disney-discovery.html
+++ b/src/forms/disney-discovery.html
@@ -12,10 +12,11 @@ permalink: /disney/discovery
       <div class="col-12">
         <div class="content pb-0">
         <div class="editable mt-5">
-        <h1>Disney Discovery Questions</h1>
-          <p>Below are a list of questions to help Ocupop get a better understanding of what is on the minds of key stakeholders as we prepare for our Discovery Day. There are no wrong answers. We thank you for your input!</p>
-          <p>Please complete by the end of the day on August 16th.</p>
+          <h1>Disney Discovery Questions</h1>
+          <p class="px-1">Below are a list of questions to help Ocupop get a better understanding of what is on the minds of key stakeholders as we prepare for our Discovery Day. There are no wrong answers. We thank you for your input!</p>
+          <p class="px-1">Please complete by the end of the day on August 16th.</p>
         </div>
+        <hr>
 <div class="cognito">
 <script src="https://services.cognitoforms.com/s/bbN8iw1MJUqjPe6aHn-_rw"></script>
 <script>Cognito.load("forms", { id: "53" });</script>
