Updated 'src/forms/apply-now.html' via CloudCannon

--- a/src/forms/apply-now.html
+++ b/src/forms/apply-now.html
@@ -1,8 +1,9 @@
 ---
 layout: form
-title: Testimonials
+title: Apply Now
 permalink: /apply-now
 ---
+
 <section id="page-intro" class="pt-0">
   <div class="container">
     <div class="row">
