--- a/src/search.html
+++ b/src/search.html
@@ -2,6 +2,11 @@
 layout: default
 title: Search
 ---
+]
+<!-- needed live url to test new facebook sharing functionality -->
+<a
+  href="https://www.facebook.com/dialog/share?app_id=1434607503380064&display=popup&href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2F&redirect_uri=https%3A%2F%2Fdevelopers.facebook.com%2Ftools%2Fexplorer">Test
+  Share</a>
 
 <section id="search-results" style="display: none;"> </section>
 
