Share link testing

--- a/src/search.html
+++ b/src/search.html
@@ -2,7 +2,10 @@
 layout: default
 title: Search
 ---
-
+<a href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.url}}{{ page.url }}"
+  aria-label="Linkedin link" target="_blank" rel="noopener">
+  Share
+</a>
 <section id="search-results" style="display: none;"> </section>
 
 {% raw %}
