share link testing

--- a/src/search.html
+++ b/src/search.html
@@ -4,7 +4,11 @@ title: Search
 ---
 <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.url}}{{ page.url }}"
   aria-label="Linkedin link" target="_blank" rel="noopener">
-  Share
+  Share Linkedin
+</a>
+<a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}" aria-label="Facebook Share link"
+  target="_blank" rel="noopener">
+  Share Facebook
 </a>
 <section id="search-results" style="display: none;"> </section>
 
