--- a/src/forms/seo-gap-analysis-questionnaire.html
+++ b/src/forms/seo-gap-analysis-questionnaire.html
@@ -10,12 +10,10 @@ permalink: /seo-gap-analysis/questionaire
       <div class="col-12">
         <div class="content">
           <h1 class="mb-4">SEO Gap Analysis Questionnaire”</h1>
-          <div class="cognito">
+            <div class="cognito">
             <script src="https://services.cognitoforms.com/s/bbN8iw1MJUqjPe6aHn-_rw"></script>
-            <script>
-              Cognito.load("forms", { id: "10" });
-            </script>
-          </div>
+            <script>Cognito.load("forms", { id: "69" });</script>
+            </div>
         </div>
       </div>
     </div>
