--- a/src/forms/message-strategy-bayou-bend.html
+++ b/src/forms/message-strategy-bayou-bend.html
@@ -8,9 +8,9 @@ permalink: /message-strategy/bayou-bend
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <h1 class="mb-4">Message Strategy Questionnaire</h1>
+          <h1 class="mb-4 editable">Message Strategy Questionnaire</h1>
           <p class="mb-4">
-            <small>
+            <small class="editable">
               The Message Strategy exercise is the critical first step of any
               successful marketing or advertising campaign. The results of this
               process establish a road map for the company to follow in
@@ -28,10 +28,7 @@ permalink: /message-strategy/bayou-bend
             </small>
           </p>
           <div class="cognito">
-            <script src="https://services.cognitoforms.com/s/bbN8iw1MJUqjPe6aHn-_rw"></script>
-            <script>
-              Cognito.load("forms", { id: "10" });
-            </script>
+            <script src="https://www.cognitoforms.com/f/seamless.js" data-key="bbN8iw1MJUqjPe6aHn-_rw" data-form="120"></script>
           </div>
         </div>
       </div>
