Updated 'src/forms/message-strategy-bayou-bend.html' via CloudCannon

--- a/src/forms/message-strategy-bayou-bend.html
+++ b/src/forms/message-strategy-bayou-bend.html
@@ -9,8 +9,8 @@ permalink: /message-strategy/bayou-bend
       <div class="col-12">
         <div class="content">
           <h1 class="mb-4 editable">Message Strategy Questionnaire</h1>
-          <p class="mb-4">
-            <small class="editable">
+          <p class="mb-4 editable">
+            <small>
               The Message Strategy exercise is the critical first step of any
               successful marketing or advertising campaign. The results of this
               process establish a road map for the company to follow in
