Updated 'src/forms/message-strategy-bayou-bend.html' via CloudCannon

--- a/src/forms/message-strategy-bayou-bend.html
+++ b/src/forms/message-strategy-bayou-bend.html
@@ -10,22 +10,7 @@ permalink: /message-strategy/bayou-bend
         <div class="content">
           <h1 class="mb-4 editable">Message Strategy Questionnaire</h1>
           <p class="mb-4 editable">
-            <small>
-              The Message Strategy exercise is the critical first step of any
-              successful marketing or advertising campaign. The results of this
-              process establish a road map for the company to follow in
-              campaigns across all media. All advertising and marketing
-              generated around a specific brand or product should speak to the
-              principles laid out in the Message Strategy. This preliminary
-              process often is part of a greater holistic marketing effort
-              aiming to establish a Positioning Statement. Just as the Message
-              Strategy establishes an advertising road map, the Positioning
-              Statement provides the company with a distilled Brand Directive
-              which guides actions across all aspects of business....From
-              operations, to sales, to marketing, to shipping, to customer
-              service, the Positioning Statement is a mantra that drills to the
-              core of what makes your brand tick.
-            </small>
+            <small> The Message Strategy exercise is the critical first step of any successful communications campaign. The results of this process establish a road map for the company to follow in campaigns and efforts across all stakeholders and media. All materials generated around a specific brand or product should speak to the principles laid out in the Message Strategy.<br /><br />This preliminary process often is part of a greater holistic effort to establish a Brand Framework. Just as the Message Strategy establishes a communications road map, the Brand Framework provides the company with a distilled brand idea and foundations, which guide actions across all aspects of business. From operations, to sales, to marketing, to key stakeholder and community engagement, to shipping and customer service, the Brand Framework is a mantra that drills to the core of what makes your brand tick. </small>
           </p>
           <div class="cognito">
             <script src="https://www.cognitoforms.com/f/seamless.js" data-key="bbN8iw1MJUqjPe6aHn-_rw" data-form="120"></script>
