--- a/src/forms/message-strategy-bayou-bend.html
+++ b/src/forms/message-strategy-bayou-bend.html
@@ -9,17 +9,20 @@ permalink: /message-strategy/bayou-bend
       <div class="col-12">
         <div class="content">
           <h1 class="mb-4 editable">Message Strategy Questionnaire</h1>
-          <p class="editable">We are making updates and this form will be available shortly...</p>
-          <!--
           <p class="mb-4 editable">
-            <small> The Message Strategy exercise is the critical first step of any successful communications campaign. The results of this process establish a road map for the company to follow in campaigns and efforts across all stakeholders and media. All materials generated around a specific brand or product should speak to the principles laid out in the Message Strategy.<br /><br />This preliminary process often is part of a greater holistic effort to establish a Brand Framework. Just as the Message Strategy establishes a communications road map, the Brand Framework provides the company with a distilled brand idea and foundations, which guide actions across all aspects of business. From operations, to sales, to marketing, to key stakeholder and community engagement, to shipping and customer service, the Brand Framework is a mantra that drills to the core of what makes your brand tick. </small>
+            <small>
+              The Message Strategy exercise is the critical first step of any successful communications campaign. The results of this process establish a road map for Bayou Bend to follow in campaigns and efforts across all stakeholders and media. All materials generated should speak to the principles laid out in the Message Strategy.<br/><br/>
+
+This preliminary process often is part of a greater holistic effort to establish a Brand Framework. Just as the Message Strategy establishes a communications road map, the Brand Framework provides Bayou Bend with a distilled brand idea and foundations, which guide actions across all aspects of business. From operations, to sales, to marketing, to key stakeholder and community engagement, the Brand Framework is a mantra that drills to the core of what makes your brand tick.<br/><br/>
+
+When completing this form, keep in mind the goal of our effort: to establish a cohesive brand and communications strategy for Bayou Bend CCS. Please tailor your responses to be representative of unified messaging for Bayou Bend, rather than of those representing the perspectives of each joint venture partner.
+            </small>
           </p>
-          -->
-          <!--
+          
           <div class="cognito">
             <script src="https://www.cognitoforms.com/f/seamless.js" data-key="bbN8iw1MJUqjPe6aHn-_rw" data-form="120"></script>
           </div>
-          -->
+
         </div>
       </div>
     </div>
