--- a/src/contact.html
+++ b/src/contact.html
@@ -20,11 +20,12 @@ testimonial:
       </div>
       <div class="col-12 col-lg-10 mx-lg-auto">
         <div class="content">
-          <div id="contact-page-form" class="cognito">
+          <script src="https://www.cognitoforms.com/f/seamless.js" data-key="bbN8iw1MJUqjPe6aHn-_rw" data-form="25"></script>
+          <!-- <div id="contact-page-form" class="cognito">
             <div class="preloader">
               <small>contact form loading</small>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
