Updated 1 file via CloudCannon.

--- a/src/forms/message-strategy.html
+++ b/src/forms/message-strategy.html
@@ -12,20 +12,10 @@ permalink: /message-strategy/questionnaire
           <h1 class="mb-4">Message Strategy Questionnaire</h1>
           <p class="mb-4">
             <small>
-              The Message Strategy exercise is the critical first step of any
-              successful marketing or advertising campaign. The results of this
-              process establish a road map for the company to follow in
-              campaigns across all media. All advertising and marketing
-              generated around a specific brand or product should speak to the
-              principles laid out in the Message Strategy. This preliminary
-              process often is part of a greater holistic marketing effort
-              aiming to establish a Positioning Statement. Just as the Message
-              Strategy establishes an advertising road map, the Positioning
-              Statement provides the company with a distilled Brand Directive
-              which guides actions across all aspects of business....From
-              operations, to sales, to marketing, to shipping, to customer
-              service, the Positioning Statement is a mantra that drills to the
-              core of what makes your brand tick.
+The Message Strategy exercise is the critical first step of any successful communications campaign or project. The end results of this process establish a road map for brands to follow in campaigns and efforts across all stakeholders and media. All materials generated should speak to the principles laid out in the Message Strategy.</small><br/><br/>
+
+<small>This preliminary process often is part of a greater holistic effort to establish a clear, consistent strategy on behalf of the brand. Whether we are mere gaining insight to better inform our work, developing a brand framework centered on brand vision and goals, or outlining and articulating a communication approach in digital or physical spaces, this effort is key in helping us—and your core audiences—understand the core of what makes your brand/product/company tick.
+
             </small>
           </p>
           <div class="cognito">
