--- a/src/about.html
+++ b/src/about.html
@@ -95,9 +95,10 @@ testimonial:
 <section id="team" class="py-0">
   <div class="row no-gutters">
     {% for member in site.data.staff %}
+    {% capture fallback %}https://placehold.co/600x600/494949/FFFFFF/?text={{ member.name | replace ' ', '+'}}{% endcapture %}
     <div class="col-md-4">
       <div class="position-relative">
-        <a href="#" class="bg-image aspect-1x1 border-0" style="background-image: url({{ member.image | default: site.placeholders.aspect-4x3 }})" data-toggle="modal" data-target=".team-modal-{{ forloop.index }}">
+        <a href="#" class="bg-image aspect-1x1 border-0" style="background-image: url({{ member.image | default: fallback }})" data-toggle="modal" data-target=".team-modal-{{ forloop.index }}">
           <div class="hover-overlay text-white">
             <div class="hover-content">
               <p class="hover-primary-text">{{ member.name }}</p>
